// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Characters Robot renders confusion marks and flower if female robot is in default pose 1`] = `
.c0 {
  padding: 9.6rem 0 3rem 0;
  position: relative;
}

<div
  className="c0"
>
  <RobotArtwork
    pose="default"
  />
  <ConfusionMarks />
  <GenderFlower
    isVisible={true}
  />
</div>
`;

exports[`COMPONENT - Characters Robot renders confusion marks if robot is in default pose 1`] = `
.c0 {
  padding: 9.6rem 0 3rem 0;
  position: relative;
}

<div
  className="c0"
>
  <RobotArtwork
    pose="default"
  />
  <ConfusionMarks />
  <GenderFlower
    isVisible={false}
  />
</div>
`;

exports[`COMPONENT - Characters Robot renders correctly with default props 1`] = `
.c0 {
  padding: 9.6rem 0 3rem 0;
  position: relative;
}

<div
  className="c0"
>
  <RobotArtwork
    pose="default"
  />
  <ConfusionMarks />
  <GenderFlower
    isVisible={false}
  />
</div>
`;

exports[`COMPONENT - Characters Robot renders flower if female gender is passed 1`] = `
.c0 {
  padding: 9.6rem 0 3rem 0;
  position: relative;
}

<div
  className="c0"
>
  <RobotArtwork
    pose="default"
  />
  <ConfusionMarks />
  <GenderFlower
    isVisible={true}
  />
</div>
`;
